--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^12.3.1",
     "express": "^4.17.1",
     "keyv": "^4.0.1",
-    "noblox.js": "^4.7.2"
+    "noblox.js": "^4.7.2",
+    "got": "^11.8.1"
   }
 }
